@@ -460,45 +460,3 @@ int bus_remove_match_internal(
 
         return bus_remove_match_internal_dbus1(bus, match);
 }
-
-_public_ int sd_bus_get_owner_machine_id(sd_bus *bus, const char *name, sd_id128_t *machine) {
-        _cleanup_bus_message_unref_ sd_bus_message *reply = NULL, *m = NULL;
-        const char *mid;
-        int r;
-
-        assert_return(bus, -EINVAL);
-        assert_return(name, -EINVAL);
-        assert_return(machine, -EINVAL);
-        assert_return(!bus_pid_changed(bus), -ECHILD);
-        assert_return(service_name_is_valid(name), -EINVAL);
-
-        if (!BUS_IS_OPEN(bus->state))
-                return -ENOTCONN;
-
-        if (streq_ptr(name, bus->unique_name))
-                return sd_id128_get_machine(machine);
-
-        r = sd_bus_message_new_method_call(
-                        bus,
-                        &m,
-                        name,
-                        "/",
-                        "org.freedesktop.DBus.Peer",
-                        "GetMachineId");
-        if (r < 0)
-                return r;
-
-        r = sd_bus_message_set_auto_start(m, false);
-        if (r < 0)
-                return r;
-
-        r = sd_bus_call(bus, m, 0, NULL, &reply);
-        if (r < 0)
-                return r;
-
-        r = sd_bus_message_read(reply, "s", &mid);
-        if (r < 0)
-                return r;
-
-        return sd_id128_from_string(mid, machine);
-}
